# Parallel-Programming

Project1-OddEvenTranspositionSort/source/: .clang-format  Makefile  odd_even_parallel_sort.cpp  odd_even_sequential_sort.cpp
Project2-MandelbrotSetComputation/source/: Makefile  asg2.h  mpi.cpp  pthread.cpp  sequential.cpp
Project3-NbodySimulation/: CMakeLists.txt  CMakeSettings.json
Project3-NbodySimulation/src/: CMakeLists.txt  cuda.cu  mpi.cpp  mpiomp.cpp  openmp.cpp  pthread.cpp  sequential.cpp  video.cpp
Project3-NbodySimulation/src/headers/: shared.h
Project4-HeatSimulation/: CMakeLists.txt  CMakeSettings.json
Project4-HeatSimulation/src/: CMakeLists.txt  cuda.cu  mpi.cpp  mpiomp.cpp  openmp.cpp  pthread.cpp  sequential.cpp
Project4-HeatSimulation/src/headers/: shared.h
